Ensure default contrast between component active background and text

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -250,8 +250,8 @@ $box-shadow-sm:               0 .125rem .25rem rgba($black, .075) !default;
 $box-shadow:                  0 .5rem 1rem rgba($black, .15) !default;
 $box-shadow-lg:               0 1rem 3rem rgba($black, .175) !default;
 
-$component-active-color:      $white !default;
-$component-active-bg:         $primary !default;
+$component-active-bg:         theme-color("primary") !default;
+$component-active-color:      contrast-yiq($component-active-bg) !default;
 
 $caret-width:                 .3em !default;
 
